# OCSEF2022

./: README.md  gui.py  main.py  pyproject.toml  text.docx  text.txt  tmp.py  vid.py
