[tool.poetry]
name = "OCSEF2022"
version = "0.1.0"
description = "Science Fair 2022"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.16.1"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
Pillow = "^8.4.0"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
